--- a/styles/index.css
+++ b/styles/index.css
@@ -15,9 +15,15 @@ html, body {
   height: 100%;
 }
 
+/*A way to make the font apply accross whole site*/
 * {
   font-family: 'Share Tech Mono', monospace;
   box-sizing: border-box;
+}
+
+.logo {
+  padding: 1em;
+  margin-top: 5px;
 }
 
 .top-nav {
@@ -25,10 +31,8 @@ html, body {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  background-color: #00BAF0;
-  background: linear-gradient(to left, #f46b45, #eea849);
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  color: #FFF;
+  color: rgb(255, 77, 193);
+  font-weight: 500;
   height: 50px;
   padding: 1em;
 }
@@ -46,7 +50,7 @@ html, body {
   overflow: hidden;
 }
 
-.menu-button-container {
+.menu__button--container {
   display: none;
   height: 100%;
   width: 30px;
@@ -56,89 +60,93 @@ html, body {
   align-items: center;
 }
 
-#menu-toggle {
+/*hide burger when top nav is showing*/
+.menu-toggle {
   display: none;
 }
 
-.menu-button,
-.menu-button::before,
-.menu-button::after {
+.menu__button,
+.menu__button::before,
+.menu__button::after {
   display: block;
   background-color: #fff;
   position: absolute;
   height: 4px;
   width: 30px;
-  transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
+  /*use of SVG as burger icon, I found this online didnt create it myself!*/
+  transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1); 
   border-radius: 2px;
 }
 
-.menu-button::before {
+.menu__button::before {
   content: '';
   margin-top: -8px;
 }
 
-.menu-button::after {
+.menu__button::after {
   content: '';
   margin-top: 8px;
 }
 
-#menu-toggle:checked + .menu-button-container .menu-button::before {
+.menu-toggle:checked + .menu__button--container .menu-button::before {
   margin-top: 0px;
   transform: rotate(405deg);
 }
 
-#menu-toggle:checked + .menu-button-container .menu-button {
+.menu-toggle:checked + .menu__button--container .menu-button {
   background: rgba(255, 255, 255, 0);
 }
 
-#menu-toggle:checked + .menu-button-container .menu-button::after {
+.menu-toggle:checked + .menu__button--container .menu-button::after {
   margin-top: 0px;
   transform: rotate(-405deg);
 }
 
 
 /*media query for when the top nav becomes burger*/
-/*understanding mobile screen width is max 480px but 600px seemed suitable breakpoint for this project*/
+/*understanding mobile screen width is max 480px but 720px seemed suitable breakpoint for this project otherwise top-nav got squashed*/
 
-@media (max-width: 600px) {
-  .menu-button-container {
-    display: flex;
-  }
-  .menu {
-    position: absolute;
-    top: 0;
-    margin-top: 50px;
-    left: 0;
-    flex-direction: column;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-  }
-  #menu-toggle ~ .menu li {
-    height: 0;
-    margin: 0;
-    padding: 0;
-    border: 0;
-    transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
-  }
-  #menu-toggle:checked ~ .menu li {
-    border: 1px solid #333;
-    height: 2.5em;
-    padding: 0.5em;
-    transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
-  }
-  .menu > li {
-    display: flex;
-    justify-content: center;
-    margin: 0;
-    padding: 0.5em 0;
-    width: 100%;
-    color: white;
-    background-color: #222;
-  }
-  .menu > li:not(:last-child) {
-    border-bottom: 1px solid #444;
-  }
+@media screen and (max-width: 720px) {
+  /*buger will show with display flex*/
+      .menu__button--container {
+        display: flex;
+      }
+      .menu {
+        position: absolute;
+        top: 0;
+        margin-top: 50px;
+        left: 0;
+        flex-direction: column;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+      }
+      .menu-toggle ~ .menu li {
+        height: 0;
+        margin: 0;
+        padding: 0;
+        border: 0;
+        transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+      }
+      .menu-toggle:checked ~ .menu li {
+        border: 1px solid #333;
+        /*Aparently EM is better than px for reponsive layouts because it responds to text size??*/
+        height: 2.5em;
+        padding: 0.5em;
+        transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+      }
+      .menu > li {
+        display: flex;
+        justify-content: center;
+        margin: 0;
+        padding: 0.5em 0;
+        width: 100%;
+        color: white;
+        background-color: #222;
+      }
+      .menu > li:not(:last-child) {
+        border-bottom: 1px solid #444;
+      }
 }
 
 
